--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "laravel/framework": ">=5.0.0"
+        "laravel/framework": ">=5.0.0",
+        "php": ">=5.5"
     },
     "repositories": [
         {
